# proofofspaceresults

./: README.md
nemo1369/pos-track1/: CMakeLists.txt  generate.sh  install.sh  prove.sh
nemo1369/pos-track1/include/chia/: aes.hpp  bits.hpp  calculate_bucket.hpp  encoding.hpp  picosha2.hpp  plotter_disk.hpp  pos_constants.hpp  prover_disk.hpp  sort_on_disk.hpp  utilities.hpp  verifier.hpp
nemo1369/pos-track1/src/: main.cpp
nemo1369/pos-track2/: CMakeLists.txt  generate.sh  install.sh  prove.sh
nemo1369/pos-track2/include/chia/: aes.hpp  bits.hpp  calculate_bucket.hpp  encoding.hpp  plotter_disk.hpp  pos_constants.hpp  prover_disk.hpp  sort_on_disk.hpp  stack_allocator.hpp  utilities.hpp  verifier.hpp
nemo1369/pos-track2/src/: main.cpp
nemo1369/pos-track3/: CMakeLists.txt
nemo1369/pos-track3/include/chia/: aes.hpp  bits.hpp  calculate_bucket.hpp  encoding.hpp  hellman.hpp  picosha2.hpp  plotter_disk.hpp  pos_constants.hpp  prover_disk.hpp  sort_on_disk.hpp  stack_allocator.hpp  utilities.hpp  verifier.hpp
nemo1369/pos-track3/src/: main.cpp
pulmark/: README.md
pulmark/POS/: Makefile  README.md  install.sh
pulmark/POS/include/vector_class/: vectori128.h
pulmark/POS/lib/FastPrefixCoder/: Makefile  fpc.h
pulmark/POS/lib/FiniteStateEntropy/lib/: fse_compress.c
pulmark/POS/src/: cli.cpp
pulmark/POS/src/include/: bits.hpp  bucket_store.hpp  calculate_bucket.hpp  plotter_disk.hpp  plotter_disk_p0.hpp  plotter_disk_p1.hpp  plotter_disk_p2.hpp  plotter_disk_p3.hpp  plotter_disk_p4.hpp  pos_constants.hpp  verifier.hpp
pulmark/POS2/: Makefile  README.md  gcc_flags_native.sh  install.sh  valgrind.sh
pulmark/POS2/include/mio/: mio.hpp
pulmark/POS2/lib/FastPrefixCoder/: fpc.c
pulmark/POS2/lib/FiniteStateEntropy/: Makefile2
pulmark/POS2/src/include/: encoding.hpp  file_disk.hpp  hellman_attack.hpp  memory_map.hpp  plotter_disk.hpp  prover_disk.hpp  prover_disk_hellman.hpp  sorting.hpp  util.hpp
